--- a/src/main/resources/static/Home.html
+++ b/src/main/resources/static/Home.html
@@ -13,7 +13,10 @@
                 <a href="Home.html">Inicio</a>
                 <a href="Novedades.html">Novedades</a>
                 <a href="Productos.html">Productos</a>
-                <a href="Index.html">Sobre Nosotros</a>      
+                <a href="Index.html">Sobre Nosotros</a>
+                <a href="Videos.html">Videos</a>
+                <a href="Audio.html">Audio</a>
+                
             </nav>
             
             <hr><!-- comment -->
