--- a/src/main/resources/static/Home.html
+++ b/src/main/resources/static/Home.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/css.css">
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     </head>
     <body>
         <header>
@@ -29,6 +30,7 @@
             <h2>Productos</h2>
             <article>
                     <h3>Computadora 1</h3>
+                    <button type="button" class="btn btn-primary">Primary</button>
                 <Figure>
                     <img src="images/eniac.png" alt="eniac" width="75"/>
                     <figcaption>Damas del Eniac</figcaption>
@@ -36,6 +38,6 @@
             </article>
         </section>
         <p>Este es el Home</p>
-        
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>   
     </body>
 </html>
